# UG-DataScience-24

./: .gitignore  pyproject.toml
Tareas/: config.typ
Tareas/Tarea-1/: Tarea-01.ipynb  Tarea-01.qmd  Tarea-1.typ
Tareas/Tarea-2/: Tarea-02.ipynb  Tarea-2.typ
Tareas/Tarea-3/: Tarea-3.typ
Tareas/Tarea-4/: Tarea-4.typ  Tarea_04.ipynb
